--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,53 +1,5 @@
-<form *ngIf="!isVisible" class="form" [formGroup]="form">
-  <h1>Enter your email and password</h1>
-  <label>Email</label>
-  <input #inputEmail type="email" placeholder="Your email" formControlName="email">
-  <div
-    *ngIf="form.get('email')?.invalid && form.get('email')?.touched"
-    class="validation"
-  >
-    <small *ngIf="form.get('email')?.errors?.['required']">
-      Email cant be empty
-    </small>
-    <small *ngIf="form.get('email')?.errors?.['email']">Put the correct email</small>
-  </div>
-  <label>Password</label>
-  <input type="password" placeholder="Your password" formControlName="password">
+<app-sign-in (onChanged)="changeView()" *ngIf="isSignInView"></app-sign-in>
 
-  <div
-    *ngIf="form.get('password')?.invalid && form.get('password')?.touched"
-    class="validation"
-  >
-    <small *ngIf="form.get('password')?.errors?.['required']">
-      Password cant be empty
-    </small>
-    <small
-      *ngIf="form.get('password')?.errors?.['minlength']">
-      Length must be {{form.get('password')?.errors?.['minlength'].requiredLength}} symbols
-      Now {{form.get('password')?.errors?.['minlength'].actualLength}}
-    </small>
-  </div>
+<app-create-new-account (onChanged)="changeView()" *ngIf="!isSignInView"></app-create-new-account>
 
-
-  <div>
-    <button type="submit" [disabled]="form.invalid">Sign in</button>
-    <button (click)="newUser()" type="button">Create new account</button>
-  </div>
-</form>
-
-
-<form *ngIf="isVisible" class="form" [formGroup]="form">
-  <h1>Enter your name, email and password</h1>
-  <label>Username</label>
-  <input type="text" placeholder="Your name" formControlName="username">
-  <label>Email</label>
-  <input type="email" placeholder="Your email" formControlName="email">
-  <label>Password</label>
-  <input type="password" placeholder="Your password" formControlName="password">
-
-  <div>
-    <button type="submit" [disabled]="form.invalid">Sign in</button>
-    <button (click)="newUser()" type="button">Switch to login</button>
-  </div>
-</form>
 
