--- a/src/app/login-page/create-new-account/create-new-account.component.html
+++ b/src/app/login-page/create-new-account/create-new-account.component.html
@@ -8,7 +8,7 @@
   <input type="password" placeholder="Your password" formControlName="password">
 
   <div>
-    <button type="submit" (click)="submit()" [disabled]="createForm.invalid">Sign in</button>
-    <button (click)="newUser()" type="button">Switch to login</button>
+    <button type="submit" [disabled]="createForm.invalid" (click)="createNewUser()">Create new account</button>
+    <button (click)="switchToLogin()" type="button">Switch to login</button>
   </div>
 </form>
