--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 </header>
 
 <div class="sig-in-form">
-<app-login-page></app-login-page>
+<!--<app-login-page></app-login-page>-->
+  <router-outlet></router-outlet>
 </div>
