--- a/src/app/hero-selection-page/hero-selection-page.component.html
+++ b/src/app/hero-selection-page/hero-selection-page.component.html
@@ -1,14 +1,28 @@
 <div class="container">
   <h3>Find Hero</h3>
-  <input type="search" placeholder="Enter the hero name">
+  <input
+    type="text"
+    placeholder="Enter the hero name"
+    (keyup.enter)="search()"
+    [(ngModel)]="searchValue"
+    [pattern]="'^[a-zA-Z ]*$'"
+  >
   <div class="hero-list">
-    <div class="hero-info">
+    <div class="hero-info" *ngFor="let hero of heroes">
       <div class="name-avatar">
-        <h3>Hero 1</h3>
-        <img>
+        <h3>{{ hero.name }}</h3>
+        <img [src]="hero.image.url">
       </div>
-      <div class="stats">Stats</div>
-      <button class="select-hero-button">Select</button>
+      <div class="stats">
+        <ng-container *ngFor="let stat of hero.powerstats | keyvalue">
+          <span>
+            {{ stat.key }}: {{ stat.value }}
+          </span>
+        </ng-container>
+      </div>
+      <div class="btn-select">
+        <button class="select-hero-button">Select</button>
+      </div>
     </div>
   </div>
 </div>
