--- a/src/app/hero-selection-page/hero-selection-page.component.scss
+++ b/src/app/hero-selection-page/hero-selection-page.component.scss
@@ -1,12 +1,14 @@
 
 .hero-list {
-  border: 1px solid black;
   width: 70vw;
+  height: 30vh;
 }
 
 .hero-info {
   display: flex;
   justify-content: space-between;
+  border: 1px solid black;
+  margin-bottom: 10px;
 }
 
 input {
@@ -30,4 +32,38 @@ button {
 
 button:hover {
   background-color: darkgrey;
+}
+
+img {
+  height: 300px;
+  width: 200px;
+  margin: 10px;
+}
+
+.name-avatar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h3 {
+  width: 100px;
+
+}
+
+.stats {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 30px;
+
+  div {
+    display: inline-block;
+  }
+}
+
+.btn-select {
+  display: flex;
+  align-items: flex-end;
 }
