--- a/src/app/hero-selection-page/hero-selection-page.component.html
+++ b/src/app/hero-selection-page/hero-selection-page.component.html
@@ -1,28 +1,15 @@
-<div class="container">
-  <h3>Find Hero</h3>
-  <input
-    type="text"
-    placeholder="Enter the hero name"
-    (keyup.enter)="search()"
-    [(ngModel)]="searchValue"
-    [pattern]="'^[a-zA-Z ]*$'"
-  >
-  <div class="hero-list">
-    <div class="hero-info" *ngFor="let hero of heroes">
-      <div class="name-avatar">
-        <h3>{{ hero.name }}</h3>
-        <img [src]="hero.image.url">
-      </div>
-      <div class="stats">
-        <ng-container *ngFor="let stat of hero.powerstats | keyvalue">
-          <span>
-            {{ stat.key }}: {{ stat.value }}
-          </span>
-        </ng-container>
-      </div>
-      <div class="btn-select">
-        <button class="select-hero-button">Select</button>
-      </div>
-    </div>
+<div class="body-page">
+  <app-alphabetic-select (letter)="onLetterSelected($event)"></app-alphabetic-select>
+  <div class="container">
+    <h3>Find Hero</h3>
+    <input
+      #searchInput
+      type="text"
+      placeholder="Enter the hero name"
+      (keyup.enter)="search()"
+      [(ngModel)]="searchValue"
+      [pattern]="'^[a-zA-Z ]*$'"
+    >
+    <app-hero-list [heroes]="heroes"></app-hero-list>
   </div>
 </div>
