--- a/src/app/hero-selection-page/hero-selection-page.component.html
+++ b/src/app/hero-selection-page/hero-selection-page.component.html
@@ -3,13 +3,13 @@
   <div class="container">
     <h3>Find Hero</h3>
     <input
-      #searchInput
       type="text"
       placeholder="Enter the hero name"
       (keyup.enter)="search()"
       [(ngModel)]="searchValue"
       [pattern]="'^[a-zA-Z ]*$'"
     >
+    <app-recent-searches (value)="addValueToInput($event)" *ngIf="this.storeService.userState.recentSearch.length !== 0"></app-recent-searches>
     <app-hero-list [heroes]="heroes"></app-hero-list>
   </div>
 </div>
