--- a/src/app/hero-selection-page/recent-searches/recent-searches.component.html
+++ b/src/app/hero-selection-page/recent-searches/recent-searches.component.html
@@ -1,7 +1,7 @@
 <div>
   <ul>
-    <li>
-      <button type="button" class="btn-letter"></button>
+    <li *ngFor="let value of filterSearch()">
+      <button #btn type="button" class="btn-letter" (click)="adToSearch(btn)">{{value}}</button>
     </li>
   </ul>
 </div>
