--- a/src/app/user-info-page/heroes/heroes.component.html
+++ b/src/app/user-info-page/heroes/heroes.component.html
@@ -1,1 +1,1 @@
-<app-hero-list [heroes]="storeService.userState.selectedHeroes"></app-hero-list>
+<app-hero-list [heroes]="storeService.userState.selectedHeroes.reverse()"></app-hero-list>
