--- a/src/app/user-info-page/user-info-page.component.html
+++ b/src/app/user-info-page/user-info-page.component.html
@@ -1,11 +1,11 @@
 <div class="middle">
-  <a [routerLink]="['heroes']" class="btn btn1 btn-user-page">Heroes</a>
-  <a routerLink="battle" class="btn-user-page">Battle</a>
-  <a routerLink="powerups" class="btn-user-page">PowerUps</a>
+  <button routerLink="heroes" routerLinkActive="selected" class="btn1 btn-user-page">Heroes</button>
+  <button routerLink="history" routerLinkActive="selected" class="btn-user-page">Battle</button>
+  <button routerLink="powerups" routerLinkActive="selected" class="btn-user-page">PowerUps</button>
 </div>
 
 <div class="content">
-
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
+
 
