--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,7 @@
   <button class="btn" (click)="navigateToUserInfo()" [disabled]="userService.isSessionActive() === false">User</button>
 </header>
 
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
