--- a/src/app/hero-list/hero-list.component.scss
+++ b/src/app/hero-list/hero-list.component.scss
@@ -1,4 +1,3 @@
-
 .hero-list {
   width: 70vw;
   height: 30vh;
@@ -70,4 +69,12 @@ div {
 
 .body-page{
   display: flex;
+}
+
+.container {
+  display: flex;
+}
+
+.add-heroes-btn {
+  font-size: 30px;
 }
