--- a/src/app/hero-list/hero-list.component.html
+++ b/src/app/hero-list/hero-list.component.html
@@ -1,3 +1,8 @@
-<div class="hero-list">
+
+<div class="container">
+  <div class="hero-list">
   <app-hero-card *ngFor="let hero of heroes" [hero]="hero"></app-hero-card>
 </div>
+  <button class="add-heroes-btn">+</button>
+</div>
+
