--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <header>
   <a routerLink="select-hero"><h1>Heroes Battle</h1></a>
   <button class="btn"
-          *ngIf="userService.isSessionActive() === false"
+          *ngIf="!userService.isSessionActive()"
   >Login
   </button>
 
-  <button class="btn" (click)="logout()">Logout</button>
-  <button class="btn" (click)="navigateToUserInfo()" [disabled]="userService.isSessionActive() === false">User</button>
+  <button class="btn" (click)="logout()" *ngIf="userService.isSessionActive()">Logout</button>
+  <button class="btn" (click)="navigateToUserInfo()" *ngIf="userService.isSessionActive()">User</button>
+  <button class="btn" routerLink="battle" *ngIf="userService.isSessionActive()">FIGHT</button>
 </header>
 
 <div class="container">
