--- a/src/app/user-info-page/user-info-page.component.html
+++ b/src/app/user-info-page/user-info-page.component.html
@@ -1,6 +1,6 @@
 <div class="middle">
   <button routerLink="heroes" routerLinkActive="selected" class="btn1 btn-user-page">Heroes</button>
-  <button routerLink="history" routerLinkActive="selected" class="btn-user-page">Battle</button>
+  <button routerLink="history" routerLinkActive="selected" class="btn-user-page">Battle History</button>
   <button routerLink="powerups" routerLinkActive="selected" class="btn-user-page">PowerUps</button>
 </div>
 
