--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,3 @@
-
 header {
   margin: 0;
   background-color: blueviolet;
@@ -7,6 +6,9 @@ header {
   display: flex;
   justify-content: left;
   align-items: center;
+  -webkit-box-shadow: 0px 7px 8px 3px rgba(34, 60, 80, 1);
+  -moz-box-shadow: 0px 7px 8px 3px rgba(34, 60, 80, 1);
+  box-shadow: 0px 7px 8px 3px rgba(34, 60, 80, 1);
 }
 
 header h1{
@@ -33,6 +35,12 @@ header h1{
   justify-content: center;
   align-items: center;
   margin-top: 5%;
+  position: relative;
+}
+
+.main {
+  background-color: #dcdde1;
+  height: auto;
 }
 
 
