--- a/src/app/hero-card/hero-card.component.scss
+++ b/src/app/hero-card/hero-card.component.scss
@@ -7,11 +7,13 @@
 .hero-info {
   display: flex;
   justify-content: space-between;
-  border: 5px solid black;
+  border: 5px solid #82589F;
   margin-bottom: 10px;
   border-radius: 15px;
-  border-color: #82589F;
   background-color: hsla(314, 100%, 31%, .1);
+  -webkit-box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
 }
 
 input {
