--- a/src/app/user-info-page/history/history.component.html
+++ b/src/app/user-info-page/history/history.component.html
@@ -1,15 +1,15 @@
 <div class="container">
   <ul class="responsive-table">
     <li class="table-header">
-      <div class="col col-1">Date</div>
-      <div class="col col-2">My Hero Name</div>
-      <div class="col col-3">Opponent name</div>
-      <div class="col col-4">Result</div>
+      <div (click)="sortByDate()" class="col col-1">Date</div>
+      <div (click)="sortByName()" class="col col-2">My Hero Name</div>
+      <div (click)="sortByEnemyName()" class="col col-3">Opponent name</div>
+      <div (click)="sortByWinner()" class="col col-4">Result</div>
     </li>
-    <li class="table-row" *ngFor="let value of storeService.userState.battleHistory.reverse()">
+    <li class="table-row" *ngFor="let value of this.storeService.userState.battleHistory.reverse()">
       <div class="col col-1" data-label="Job Id">{{ value.date | date: 'dd MMMM y, HH:mm' }}</div>
-      <div class="col col-2" data-label="Customer Name">{{ value.myHero }}</div>
-      <div class="col col-3" data-label="Amount">{{ value.enemyHero }}</div>
+      <div routerLink="/hero-info/{{value.myHeroId}}" class="col col-2" data-label="Customer Name">{{ value.myHero }}</div>
+      <div routerLink="/hero-info/{{value.enemyHeroId}}" class="col col-3" data-label="Amount">{{ value.enemyHero }}</div>
       <div [ngStyle]="{color: value.winner === 'Win' ? 'green' : 'red'}" class="col col-4" data-label="Payment Status">{{ value.winner }}</div>
     </li>
   </ul>
