--- a/src/app/user-info-page/history/history.component.scss
+++ b/src/app/user-info-page/history/history.component.scss
@@ -35,11 +35,26 @@ h2 {
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 0.03em;
+    -webkit-box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+
+    .col {
+      cursor: pointer;
+    }
   }
 
   .table-row {
     background-color: #ffffff;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+    .col-2, .col-3{
+      cursor: pointer;
+      transition: .4s;
+    }
+    .col-2:hover, .col-3:hover{
+      color: #82589F;
+      font-size: 18px;
+    }
   }
 
   .col-1 {
