--- a/src/app/user-info-page/powerups/powerups.component.css
+++ b/src/app/user-info-page/powerups/powerups.component.css
@@ -24,3 +24,9 @@ span{
   padding-bottom: 10px;
   font-size: 20px;
 }
+
+.container {
+  -webkit-box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+}
