--- a/src/app/hero-selection-page/recent-searches/recent-searches.component.html
+++ b/src/app/hero-selection-page/recent-searches/recent-searches.component.html
@@ -1,7 +1,7 @@
 <div>
   <ul>
     <li *ngFor="let value of filterSearch()">
-      <button #btn type="button" class="btn-letter" (click)="adToSearch(btn)">{{value}}</button>
+      <button #btn type="button" class="btn-letter" (click)="addToSearch(btn)">{{value}}</button>
     </li>
   </ul>
 </div>
