--- a/src/app/fight-page/fight-page.component.scss
+++ b/src/app/fight-page/fight-page.component.scss
@@ -3,7 +3,8 @@
   border:3px solid #82589F;
   font-size: 20px;
   margin-bottom: 20px;
-  position: relative;
+  //position: relative;
+
 }
 
 .hero {
@@ -91,5 +92,37 @@ button {
 
 button:hover {
   background-color: red;
+}
+
+.modal {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: hsla(241, 10%, 31%, 0.7);
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  .message {
+    height: 10%;
+    width: 50%;
+    border: 2px solid #2980b9;
+    border-radius: 5px;
+    background-color: white;
+  }
+  button {
+    font-size: 20px;
+  }
+  button:hover {
+    background-color: #6C7A89;
+  }
 }
 
