--- a/src/app/hero-info/hero-info.component.scss
+++ b/src/app/hero-info/hero-info.component.scss
@@ -1,5 +1,11 @@
 .container {
   display: flex;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 
 .avatar {
