--- a/src/app/hero-selection-page/hero-selection-page.component.scss
+++ b/src/app/hero-selection-page/hero-selection-page.component.scss
@@ -71,7 +71,12 @@ h3 {
 .body-page{
   display: flex;
   justify-content: center;
-  margin-top: 2%;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 0
 }
 
 
