--- a/src/app/login-page/create-new-account/create-new-account.component.html
+++ b/src/app/login-page/create-new-account/create-new-account.component.html
@@ -9,6 +9,6 @@
 
   <div>
     <button type="submit" [disabled]="createForm.invalid" (click)="createNewUser()">Create new account</button>
-    <a routerLink="/login"><button (click)="switchToLogin()" type="button">Switch to login</button></a>
+    <button routerLink="/login" (click)="switchToLogin()" type="button">Switch to login</button>
   </div>
 </form>
