--- a/src/app/user-info-page/history/history.component.html
+++ b/src/app/user-info-page/history/history.component.html
@@ -6,7 +6,7 @@
       <div (click)="sortByEnemyName()" class="col col-3">Opponent name</div>
       <div (click)="sortByWinner()" class="col col-4">Result</div>
     </li>
-    <li class="table-row" *ngFor="let value of this.storeService.userState.battleHistory.reverse()">
+    <li class="table-row" *ngFor="let value of battles">
       <div class="col col-1" data-label="Job Id">{{ value.date | date: 'dd MMMM y, HH:mm' }}</div>
       <div routerLink="/hero-info/{{value.myHeroId}}" class="col col-2" data-label="Customer Name">{{ value.myHero }}</div>
       <div routerLink="/hero-info/{{value.enemyHeroId}}" class="col col-3" data-label="Amount">{{ value.enemyHero }}</div>
