--- a/src/app/user-info-page/user-info-page.component.scss
+++ b/src/app/user-info-page/user-info-page.component.scss
@@ -32,3 +32,12 @@
   display: flex;
   justify-content: center;
 }
+
+.main {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 0
+}
