--- a/src/app/hero-card/hero-card.component.scss
+++ b/src/app/hero-card/hero-card.component.scss
@@ -1,19 +1,17 @@
-
-.hero-list {
-  width: 70vw;
-  height: 30vh;
-}
-
-.hero-info {
-  display: flex;
-  justify-content: space-between;
-  border: 5px solid #82589F;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: hsla(314, 100%, 31%, .1);
-  -webkit-box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
-  box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+.hero {
+  &-list {
+    width: 70vw;
+    height: 30vh;
+  }
+  &-info {
+    display: flex;
+    justify-content: space-between;
+    border: 5px solid #82589F;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    background-color: hsla(314, 100%, 31%, .1);
+    box-shadow: 0px 5px 10px 15px rgba(34, 60, 80, 0.2);
+  }
 }
 
 input {
@@ -24,7 +22,6 @@ input {
 }
 
 button {
-  -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
   border: 1px solid #0000001f;
   cursor: pointer;
@@ -64,10 +61,6 @@ h3 {
   justify-content: space-around;
   align-items: center;
   font-size: 30px;
-
-div {
-  display: inline-block;
-}
 }
 
 .btn-select {
