--- a/src/app/user-info-page/heroes/heroes.component.html
+++ b/src/app/user-info-page/heroes/heroes.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <app-hero-list [heroes]="storeService.userState.selectedHeroes.reverse()"></app-hero-list>
+  <app-hero-list [heroes]="selectedHeroes.reverse()"></app-hero-list>
   <button routerLink="select-hero" class="add-heroes-btn">+</button>
 </div>
