--- a/src/app/user-info-page/history/history.component.html
+++ b/src/app/user-info-page/history/history.component.html
@@ -10,7 +10,8 @@
       <div class="col col-1" data-label="Job Id">{{ value.date | date: 'dd MMMM y, HH:mm' }}</div>
       <div routerLink="/hero-info/{{value.myHeroId}}" class="col col-2" data-label="Customer Name">{{ value.myHero }}</div>
       <div routerLink="/hero-info/{{value.enemyHeroId}}" class="col col-3" data-label="Amount">{{ value.enemyHero }}</div>
-      <div [ngStyle]="{color: value.winner === 'Win' ? 'green' : 'red'}" class="col col-4" data-label="Payment Status">{{ value.winner }}</div>
+      <div [ngClass]="{win: value.winner === 'Win', loser: value.winner === 'Loose'}" class="col col-4" data-label="Payment Status">{{ value.winner }}</div>
+<!--      <div [ngStyle]="{color: value.winner === 'Win' ? 'green' : 'red'}" class="col col-4" data-label="Payment Status">{{ value.winner }}</div>-->
     </li>
   </ul>
 </div>
