--- a/src/app/hero-card/hero-card.component.html
+++ b/src/app/hero-card/hero-card.component.html
@@ -4,7 +4,7 @@
     <img [src]="hero.image.url">
   </div>
   <div class="stats">
-    <ng-container *ngFor="let stat of hero.powerstats | keyvalue">
+    <ng-container *ngFor="let stat of hero.powerstats | keyvalue; trackBy: trackByFn">
               <span *ngIf="stat.value !== 'null'">
                 {{ stat.key }}: {{ stat.value }}
               </span>
