Cheange template form to reactive form

--- a/src/app/hero-selection-page/hero-selection-page.component.html
+++ b/src/app/hero-selection-page/hero-selection-page.component.html
@@ -5,9 +5,8 @@
       <input
         type="text"
         placeholder="Enter the hero name"
+        [formControl]="searchInput"
         (keyup.enter)="search()"
-        [pattern]="'^[a-zA-Z ]*$'"
-        [(ngModel)]="searchValue"
       >
     <app-recent-searches
       (value)="addValueToInput($event)"
