--- a/src/app/hero-selection-page/hero-selection-page.component.scss
+++ b/src/app/hero-selection-page/hero-selection-page.component.scss
@@ -19,7 +19,7 @@ input {
 }
 
 button {
-  -webkit-transition-duration: 0.4s; /* Safari */
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   border: 1px solid #0000001f;
   cursor: pointer;
