--- a/src/app/fight-page/fight-page.component.scss
+++ b/src/app/fight-page/fight-page.component.scss
@@ -1,10 +1,14 @@
 .container {
-  display: flex;
   border:3px solid #82589F;
   font-size: 20px;
-  margin-bottom: 20px;
-  //position: relative;
-
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 
 .hero {
@@ -14,6 +18,7 @@
   justify-content: center;
   align-items: center;
   margin: 20px 0 20px 0;
+
   img {
     border: 3px solid #82589F;
     width: 300px;
