--- a/src/app/fight-page/fight-page.component.scss
+++ b/src/app/fight-page/fight-page.component.scss
@@ -83,7 +83,7 @@
 }
 
 button {
-  -webkit-transition-duration: 0.4s; /* Safari */
+  -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   border: 1px solid #0000001f;
   cursor: pointer;
@@ -105,6 +105,7 @@ button:hover {
   margin-right: auto;
   left: 0;
   right: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: hsla(241, 10%, 31%, 0.7);
@@ -114,6 +115,7 @@ button:hover {
     justify-content: center;
     align-items: center;
     height: 100%;
+    border: none;
   }
 
   .message {
