Change styles. Create transform for heroes names

--- a/src/app/user-info-page/history/history.component.html
+++ b/src/app/user-info-page/history/history.component.html
@@ -1,15 +1,15 @@
 <div class="container">
   <ul class="responsive-table">
     <li class="table-header">
-      <div (click)="sortByDate()" class="col col-1">Date</div>
-      <div (click)="sortByName()" class="col col-2">My Hero Name</div>
-      <div (click)="sortByEnemyName()" class="col col-3">Opponent name</div>
-      <div (click)="sortByWinner()" class="col col-4">Result</div>
+      <div (click)="sortByDate()" class="col col-1"><span>Date</span></div>
+      <div (click)="sortByName()" class="col col-2"><span>My Hero Name</span></div>
+      <div (click)="sortByEnemyName()" class="col col-3"><span>Opponent name</span></div>
+      <div (click)="sortByWinner()" class="col col-4"><span>Result</span></div>
     </li>
     <li class="table-row" *ngFor="let value of battles">
       <div class="col col-1" data-label="Job Id">{{ value.date | date: 'dd MMMM y, HH:mm' }}</div>
-      <div routerLink="/hero-info/{{value.myHeroId}}" class="col col-2" data-label="Customer Name">{{ value.myHero }}</div>
-      <div routerLink="/hero-info/{{value.enemyHeroId}}" class="col col-3" data-label="Amount">{{ value.enemyHero }}</div>
+      <div routerLink="/hero-info/{{value.myHeroId}}" class="col col-2" data-label="Customer Name"><span>{{ value.myHero }}</span></div>
+      <div routerLink="/hero-info/{{value.enemyHeroId}}" class="col col-3" data-label="Amount"><span>{{ value.enemyHero }}</span></div>
       <div [ngClass]="{win: value.winner === 'Win', loser: value.winner === 'Loose'}" class="col col-4" data-label="Payment Status">{{ value.winner }}</div>
     </li>
   </ul>
