Fix visability hero info after loading from api

--- a/src/app/hero-info/hero-info.component.html
+++ b/src/app/hero-info/hero-info.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="hero">
+<div class="container" *ngIf="hero !== undefined">
   <div class="avatar">
     <img src="{{hero.image.url}}" alt="">
   </div>
