--- a/src/app/user-info-page/history/history.component.html
+++ b/src/app/user-info-page/history/history.component.html
@@ -8,8 +8,8 @@
     </li>
     <li class="table-row" *ngFor="let value of battles">
       <div class="col col-1" data-label="Job Id">{{ value.date | date: 'dd MMMM y, HH:mm' }}</div>
-      <div routerLink="/hero-info/{{value.myHeroId}}" class="col col-2" data-label="Customer Name"><span>{{ value.myHero }}</span></div>
-      <div routerLink="/hero-info/{{value.enemyHeroId}}" class="col col-3" data-label="Amount"><span>{{ value.enemyHero }}</span></div>
+      <div class="col col-2" data-label="Customer Name"><span routerLink="/hero-info/{{value.myHeroId}}">{{ value.myHero }}</span></div>
+      <div class="col col-3" data-label="Amount"><span routerLink="/hero-info/{{value.enemyHeroId}}">{{ value.enemyHero }}</span></div>
       <div [ngClass]="{win: value.winner === 'Win', loser: value.winner === 'Loose'}" class="col col-4" data-label="Payment Status">{{ value.winner }}</div>
     </li>
   </ul>
